# Guardian-AI

./: .env.example  .gitignore  README.md
backend/: .env  .env.example  README.md  alembic.ini  main.py  pyproject.toml  seed_db.py  seed_more.py
backend/alembic/: env.py
backend/alembic/versions/: 0001_create_sessions_table.py
backend/app/api/: alerts.py  ingest.py  session.py
backend/app/core/: config.py  database.py
backend/app/models/: session.py
backend/app/services/: ml_bridge.py  stt.py
data/: schema.md
data/demo/: demo_audio_script.txt  demo_high_risk.json  demo_hinglish.json  demo_low_risk.json
data/processed/: augmented_train.csv  clean_test.csv  clean_train.csv  clean_val.csv  final_test.csv  final_train.csv  final_val.csv  test.csv  train.csv  val.csv
data/raw/: grooming_dataset.csv  url_dataset.csv
docs/: API_CONTRACT.md  GUARDIAN_AI_PROJECT_GUIDE.md  ML_DATA_PREP.md  PROJECT_GUIDE.md
docs/root_artifacts/: BERT_QUICK_START.md  BERT_TRAINING_GUIDE.md  ML_QUICK_REFERENCE.md  ML_SETUP_GUIDE.md  MODEL_COMPARISON.md  bert_test_results.json  quick_test_output.txt
frontend/: README.md  index.html  package-lock.json  package.json  tailwind.config.js  tmp_api.js  tmp_dashboard.html  tmp_dashboard_jsx  tmp_main.js  vercel.json  vite.config.js
frontend/src/: App.jsx  index.css
ml/: data_loader.py  modal_app.py  requirements.txt  train_pipeline.py  train_prepared.py
ml/engines/: drift_engine.py  flag_engine.py  recommendation.py  report_builder.py  stage_engine.py
ml/preprocessing/: augment_data.py  (+6 more)
scripts/: call_remote_infer.sh
(+41 files in other folders)
