[project]
name = "backend"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.16.4",
    "fastapi[standard]>=0.136.1",
    "groq>=0.25.0",
    "litellm>=1.50.0",
    "openai-whisper>=20240930",
    "pydantic-settings>=2.11.0",
    "psycopg2-binary>=2.9.12",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.27",
    "python-socketio[client]>=5.11.0",
    "requests>=2.31.0",
    "sqlalchemy>=2.0.49",
    "uvicorn>=0.46.0",
]
